--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="x5-page-mode" content="app">
     <meta name="format-detection" content="email=no"/>
     <meta name="msapplication-tap-highlight" content="no">
-    <link rel="stylesheet" href="./bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="./public/libs/normalize.css">
     <link rel="stylesheet" href="./public/2048.css">
 </head>
 <body>
@@ -52,7 +52,7 @@
     <div class="grid-cell" id="grid-cell-3-3"></div>
 </div>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="./public/libs/jquery.min.js"></script>
 <script src="./public/support2048.js"></script>
 <script src="public/showanimation2048.js"></script>
 <script src="public/main2048.js"></script>
