--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Cache-Control" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <title>caveman's 2048</title>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <title>webpack 3</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta name="format-detection" content="telephone=no"/>
-    <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -20,13 +15,13 @@
     <!-- QQ强制竖屏 QQ强制全屏 -->
     <meta name="x5-orientation" content="portrait">
     <meta name="x5-fullscreen" content="true">
+    <meta name="full-screen" content="yes">
     <meta name="x5-page-mode" content="app">
     <meta name="format-detection" content="email=no"/>
     <meta name="msapplication-tap-highlight" content="no">
-    <link rel="stylesheet" href="./public/libs/normalize.css">
-    <link rel="stylesheet" href="./public/2048.css">
 </head>
 <body>
+
 <header>
     <h1>2048</h1>
     <a href="javascript:void(0);" id="newGame">New Game</a>
@@ -55,9 +50,5 @@
     <div class="grid-cell" id="grid-cell-3-3"></div>
 </div>
 
-<script src="./public/libs/jquery.min.js"></script>
-<script src="./public/support2048.js"></script>
-<script src="public/showanimation2048.js"></script>
-<script src="public/main2048.js"></script>
 </body>
 </html>
